--- a/demo.html
+++ b/demo.html
@@ -3,15 +3,15 @@ use Digest::MD5 qw(md5_hex);
 use Render;
 use MongoDB;
 
-my ($thread,$client) = @_;
+my $thread = shift;
+my $client = MongoDB::MongoClient->new;
 my $db = $client->get_database('fujiwara');
 %>
 
 <html>
   <head>
     <meta charset="utf8"/>
-    <link rel="stylesheet" type="text/css" href="css/s.css" />
-    <script src="js/less-1.7.0.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/s.css" />
     <title><%== $thread->{title} %> -- Truth Avaliable</title>
   </head>
   <body>
@@ -22,7 +22,7 @@ my $db = $client->get_database('fujiwara');
         </a>
 
         <ul class="navbar-links">
-          <li><a href="#">Index</a></li>
+          <li><a href="/">Index</a></li>
           <li><a href="#">Categories</a></li>
           <li><a href="#">Tags</a></li>
         </ul>
@@ -92,8 +92,8 @@ my $db = $client->get_database('fujiwara');
       </div>
       % }
     </div>
-    <script src="js/jquery-1.11.0.min.js"></script>
-    <script src="js/nav-dropdown.js"></script>
+    <script src="/js/jquery-1.11.0.min.js"></script>
+    <script src="/js/nav-dropdown.js"></script>
   </body>
 </html>
         
